<resources>

    <string name="app_name">Project Pinenut</string>
    <string name="action_settings">Settings</string>

    <string name="login_button_label">Login</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="create_account">Create Account</string>

    <string name="action_profile">Profile</string>
    <string name="profile_hire_me">Hire Me</string>
    <string name="profile_portfolio">Portfolio</string>
    <string name="profile_jobs">View Jobs</string>
    <string name="profile_rating">Average Rating</string>
    <string name="profile_jobs_total">Total Jobs</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_skills">Skills</string>

    <string name="facebook_application_id">425876731724697</string>
    <string name="facebook_login_protocol_scheme">fb425876731724697</string>

    <!-- On Boarding -->
    <string name="title_onboarding_1">On Boarding Title 1</string>
    <string name="description_onboarding_1">This is a description for onboarding</string>

    <string name="title_onboarding_2">On Boarding Title 2</string>
    <string name="description_onboarding_2">This is another description for onboarding</string>

    <string name="title_onboarding_3">On Boarding Title 3</string>
    <string name="description_onboarding_3">This is yet another description for onboarding</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>


    <!-- Main Tab -->
    <string name="main_tab_home_title">Home</string>
    <string name="main_tab_messages_title">Messages</string>
    <string name="main_tab_jobs_title">Jobs</string>
    <string name="main_tab_notifications_title">Notifications</string>
    <string name="main_tab_account_title">Account</string>

    <!-- Jobs -->
    <string name="job_request">You have a new Job Request</string>
    <string name="job_retrieval_failed_error_retry">We were unable to retrieve your jobs. Hit retry to try again</string>
    <string name="job_retrieval_failed_error">We were unable to retrieve your jobs.</string>

    <!-- Messages -->
    <string name="message">You have received a new message</string>
    <string name="message_retrieval_failed_error_retry">We were unable to retrieve your messages. Hit retry to try again</string>
    <string name="message_retrieval_failed_error">We were unable to retrieve your messages.</string>
    <string name="unread_messages">%1$d</string>
    <string name="message_with">Conversation with %1$s</string>

    <string name="update_failed">Update Failed</string>

    <!-- Login -->
    <string name="invalid_password">Oh dear, it looks like your password is not quite right.</string>
    <string name="no_user_found">Oh dear, no user can be found by that name</string>
    <string name="password_outdated_title">Oh Dear!</string>
    <string name="password_outdated_message">It looks like your password is out of date and must be changed</string>
    <string name="new_password">New Password</string>

    <!-- Account -->
    <string name="name">%1$s %2$s</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_message">Messages</string>
    <string name="nav_job">Jobs</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_account">Account</string>

    <!-- Generic Strings -->
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="close">close</string>
    <string name="error_title">Oh Deary Me!</string>
    <string name="ok">Okay</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
</resources>
