<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.projects.rootmu.projectpinenut.view.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/logout">
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_profile"
            android:orderInCategory="1"
            android:title="@string/action_profile"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_logout"
            android:orderInCategory="1"
            android:title="@string/action_logout"
            app:showAsAction="never" />
    </group>

</menu>
