<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.projects.rootmu.projectpinenut.ui.viewmodel.account.AccountsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/login_details"
            layout="@layout/login_details"
            app:viewModel="@{viewModel}"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.attemptLogin()}"
            android:text="@string/login_button_label" />

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.guestLogin()}"
            android:text="@string/continue_as_guest" />

        <TextView
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:onClick="@{() -> viewModel.goToCreateAccount()}"
            android:gravity="center"
            android:text="@string/create_account" />

    </LinearLayout>

</layout>