<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.projects.rootmu.projectpinenut">

    <data>
        <variable
            name="activity"
            type="com.projects.rootmu.projectpinenut.ui.screens.onboarding.OnBoardingActivity"/>

        <variable
            name="viewModel"
            type="com.projects.rootmu.projectpinenut.ui.viewmodel.OnBoardingViewModel"/>

        <import type="com.projects.rootmu.projectpinenut.ui.screens.onboarding.OnBoardingViewPagerAdapter"/>

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white_yellow">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:setAdapter="@{OnBoardingViewPagerAdapter.newInstance(activity, viewModel.NUM_ITEMS)}"
            android:foregroundGravity="center"/>

        <com.rd.PageIndicatorView2
            android:id="@+id/pageIndicatorView"
            app:layout_constraintBottom_toBottomOf="@id/btn_next_step"
            app:layout_constraintTop_toTopOf="@id/btn_next_step"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:piv_viewPager="@id/viewPager"
            app:piv_padding="8dp"
            app:piv_radius="5dp"
            app:piv_animationType="worm"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="@color/deep_orange_300"
            app:piv_unselectedColor="@color/deep_orange_100"/>

        <Button
            app:layout_constraintBottom_toTopOf="@id/layout_info"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_previous_step"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="@{viewModel.backVisibility}"
            android:onClick="@{() -> viewPager.setCurrentItem(viewPager.getCurrentItem() - 1, true) }"
            android:background="@drawable/btn_grey_rounded_selector"/>

        <Button
            app:layout_constraintBottom_toTopOf="@id/layout_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_next_step"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white_1000"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:visibility="@{viewModel.nextVisibility}"
            android:onClick="@{() -> viewPager.setCurrentItem(viewPager.getCurrentItem() + 1, true) }"
            android:background="@drawable/btn_orange_rounded_selector"/>

        <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/layout_rounded_top_white"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/btn_blue_selector"
                android:text="@string/start"
                android:textAllCaps="true"
                android:onClick="@{() -> activity.finish()}"
                android:textColor="@color/white_1000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_policy_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/grey_600"
                android:gravity="center"
                android:text="@string/start_text_advice"
                android:textColorLink="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
